# Polynomial-calc

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CPackConfig.cmake  Doxyfile  LICENSE  Makefile  README.md  factor_ring.h  main.cpp  modint.h  polynomial.h
.github/workflows/: ci.yml
doxygen_docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_factor_ring_element-members.html  class_factor_ring_element.html  class_factor_ring_element.js  class_factor_ring_element__coll__graph.dot  class_polynomial-members.html  class_polynomial.html  class_polynomial.js  class_polynomial__coll__graph.dot  classes.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  doxygen_crawl.html  factor__ring_8h.html  factor__ring_8h.js  factor__ring_8h__dep__incl.dot  factor__ring_8h__incl.dot  factor__ring_8h_source.html  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.dot  md__r_e_a_d_m_e.html  modint_8h.html  modint_8h.js  modint_8h__dep__incl.dot  modint_8h__incl.dot  modint_8h_source.html  navtreedata.js  (+32 more)
doxygen_docs/html/search/: all_0.js  all_10.js  all_11.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  related_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  (+1 more)
tests/: CMakeLists.txt  test_addition.cpp  test_division.cpp  test_factor_ring.cpp  test_modint.cpp  test_multiplication.cpp  test_polynomial.cpp  test_subtraction.cpp
